[workspace]
resolver = "2"

members = [
    "src/day1",
    "src/day2",
    "src/day3",
    "src/day4",
    "src/lib",
]

[workspace.dependencies]
anyhow = "1.0"
itertools = "0.12"
lib = { path = "src/lib"}

[workspace.lints.clippy]
let_and_return = "allow"
ptr_arg = "allow"
new_without_default = "allow"
